Np 48242 Refactor test setup - use UpsertRequestBuilder (#411)