@@ -2,7 +2,6 @@ package no.sikt.nva.nvi.common.service;
 
 import static no.sikt.nva.nvi.test.TestUtils.createNoteRequest;
 import static no.sikt.nva.nvi.test.TestUtils.createUpsertCandidateRequest;
-import static no.sikt.nva.nvi.test.TestUtils.periodRepositoryReturningOpenedPeriod;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -13,30 +12,14 @@ import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import java.net.URI;
-import java.time.ZonedDateTime;
-import no.sikt.nva.nvi.common.db.CandidateRepository;
-import no.sikt.nva.nvi.common.db.PeriodRepository;
 import no.sikt.nva.nvi.common.model.CreateNoteRequest;
 import no.sikt.nva.nvi.common.model.UpdateAssigneeRequest;
 import no.sikt.nva.nvi.common.service.exception.UnauthorizedOperationException;
 import no.sikt.nva.nvi.common.service.model.Candidate;
 import no.sikt.nva.nvi.common.service.requests.DeleteNoteRequest;
-import no.sikt.nva.nvi.test.LocalDynamoTest;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class CandidateNotesTest extends LocalDynamoTest {
-
-    public static final int YEAR = ZonedDateTime.now().getYear();
-    private CandidateRepository candidateRepository;
-    private PeriodRepository periodRepository;
-
-    @BeforeEach
-    void setup() {
-        localDynamo = initializeTestDatabase();
-        candidateRepository = new CandidateRepository(localDynamo);
-        periodRepository = periodRepositoryReturningOpenedPeriod(YEAR);
-    }
+class CandidateNotesTest extends CandidateTestSetup {
 
     @Test
     void shouldCreateNoteWhenValidCreateNoteRequest() {
@@ -47,7 +30,7 @@ class CandidateNotesTest extends LocalDynamoTest {
         var actualNote = Candidate.fetch(candidate::getIdentifier, candidateRepository, periodRepository)
                              .toDto()
                              .notes()
-                             .get(0);
+                             .getFirst();
 
         assertThat(noteRequest.username(), is(equalTo(actualNote.user())));
         assertThat(noteRequest.text(), is(equalTo(actualNote.text())));
@@ -77,7 +60,7 @@ class CandidateNotesTest extends LocalDynamoTest {
         var username = randomString();
         var candidateWithNote = candidate.createNote(new CreateNoteRequest(randomString(), username, randomUri()),
                                                      candidateRepository);
-        var noteToDelete = candidateWithNote.toDto().notes().get(0);
+        var noteToDelete = candidateWithNote.toDto().notes().getFirst();
         var updatedCandidate = candidate.deleteNote(new DeleteNoteRequest(noteToDelete.identifier(), username));
 
         assertThat(updatedCandidate.toDto().notes(), is(emptyIterable()));
@@ -88,7 +71,7 @@ class CandidateNotesTest extends LocalDynamoTest {
         var candidate = createCandidate();
         var candidateWithNote = candidate.createNote(
             new CreateNoteRequest(randomString(), randomString(), randomUri()), candidateRepository);
-        var noteToDelete = candidateWithNote.toDto().notes().get(0);
+        var noteToDelete = candidateWithNote.toDto().notes().getFirst();
 
         assertThrows(UnauthorizedOperationException.class,
                      () -> candidate.deleteNote(new DeleteNoteRequest(noteToDelete.identifier(), randomString())));
@@ -101,8 +84,8 @@ class CandidateNotesTest extends LocalDynamoTest {
         var username = randomString();
         var noteRequest = new CreateNoteRequest(randomString(), username, institutionId);
         var candidateWithNote = candidate.createNote(noteRequest, candidateRepository);
-        var actualAssignee = candidateWithNote.getApprovals().get(institutionId).getAssignee();
-        assertEquals(username, actualAssignee.value());
+        var actualAssignee = candidateWithNote.getApprovals().get(institutionId).getAssigneeUsername();
+        assertEquals(username, actualAssignee);
     }
 
     @Test
@@ -113,12 +96,12 @@ class CandidateNotesTest extends LocalDynamoTest {
         candidate.updateApproval(new UpdateAssigneeRequest(institutionId, existingAssignee));
         var noteRequest = new CreateNoteRequest(randomString(), randomString(), institutionId);
         var candidateWithNote = candidate.createNote(noteRequest, candidateRepository);
-        var actualAssignee = candidateWithNote.getApprovals().get(institutionId).getAssignee();
-        assertEquals(existingAssignee, actualAssignee.value());
+        var actualAssignee = candidateWithNote.getApprovals().get(institutionId).getAssigneeUsername();
+        assertEquals(existingAssignee, actualAssignee);
     }
 
     private Candidate createCandidate(URI institutionId) {
-        var request = createUpsertCandidateRequest(institutionId);
+        var request = createUpsertCandidateRequest(institutionId).build();
         Candidate.upsert(request, candidateRepository, periodRepository);
         return Candidate.fetchByPublicationId(request::publicationId, candidateRepository, periodRepository);
     }
